Fix some layout issues

--- a/pack/styles/custom/cd-row.scss
+++ b/pack/styles/custom/cd-row.scss
@@ -74,6 +74,7 @@ cd-row {
     & > *,
     & > [row] {
       flex: 1 1 auto;
+      order: 1;
       width: 100%;
       min-width: 0;
       max-width: none!important;
