--- a/pack/styles/custom/center-block.scss
+++ b/pack/styles/custom/center-block.scss
@@ -1,17 +1,13 @@
 center-block {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   text-align: left;
+  margin-left: auto;
+  margin-right: auto;
   
-  margin: 0 auto;
-  
-  & > * { max-width: 100%; } // https://github.com/philipwalton/flexbugs#2-column-flex-items-set-to-align-itemscenter-overflow-their-container
-  & > p { max-width: 100%; } // The above rule doesn't hit "p" elements, since they're included after this file at an equal specificity
-  
-  @media (max-width: $iPhoneLandscape) {
-    & > * { max-width: 100vw; }
-    & > p { max-width: 100vw; }
+  & + center-block {
+    margin-top: 2em;
   }
 }
